# tight-vole-zk-cpu

./: .gitignore  LICENSE  README.md  benchmark_summary.xlsx  install.sh
dev/: a.out  main.cpp  zkcpu.h
test/: CMakeLists.txt
test/arith/: stack_batched_matmul_v1.cpp
test/pathzk/: comp_batchman_balance.cpp  comp_batchman_balance_opt.cpp  comp_batchman_unbalance.cpp  comp_batchman_uniform.cpp  comp_with_pub_cir.cpp  comp_with_pub_cir_opt.cpp  fine_grain.cpp  pub_cir.cpp  test.cpp  zkcpu.h
zk-ram/: inset_rom.h  ram.h  ram_util.h  rom.h  zk-ram.h
